# SZXX

./: .gitignore  .ocamlformat  Dockerfile  HACKING.md  README.md  SZXX.opam  dune-project  szxx.opam
src/: SZXX.ml  bigbuffer.ml  bigbuffer.mli  dispatcher.ml  dispatcher.mli  dune  expert.ml  expert.mli  feed.ml  parsing.ml  xlsx.ml  xlsx.mli  xml.ml  xml.mli  zip.ml  zip.mli
src/dispatcher/: dispatcher.ml  dispatcher.mli  dune
test/: angstrom_eio.ml  dune  json_diff.ml  xlsx.ml  xml.ml  zip.ml
test/files/: chunks.json  cols.xlsx  financial.json  financial.xlsx.contents.json  formatting.json  formatting.xlsx  hybrid.xlsx.contents.json  index.html  inline.json  invalid.xlsx  simple.json  simple.xlsx  spaces.json  spaces.xlsx  streamed.json  valid.xml  zip64.json  zip64.zip.contents.json
util/: cli.ml  dune
