opam-version: "2.0"
maintainer: "Asemio"
authors: [
  "Simon Grondin"
]
synopsis: "Streaming ZIP XML XLSX parser"
description: """
SZXX is a streaming and efficient XLSX parser built from the ground up for low and constant memory usage (<10Mb).
SZXX is able to output XLSX rows while reading from a network socket without buffering any part of the file.
It can also stream data out of ZIP and XML files without buffering.
"""
license: "MIT"
tags: ["Stream" "Streaming" "Excel" "ZIP" "XML" "XLSX"]
homepage: "https://github.com/asemio/SZXX"
dev-repo: "git://github.com/asemio/SZXX"
doc: "https://github.com/asemio/SZXX"
bug-reports: "https://github.com/asemio/SZXX/issues"
pin-depends: [
  [ "eio.0.11.variants" "git+https://github.com/talex5/eio.git#variants" ]
  [ "eio_posix.0.11.variants" "git+https://github.com/talex5/eio.git#variants" ]
  [ "eio_linux.0.11.variants" "git+https://github.com/talex5/eio.git#variants" ]
  [ "eio_main.0.11.variants" "git+https://github.com/talex5/eio.git#variants" ]
]
depends: [
  "ocaml" { >= "5.0.0" }
  "dune" { >= "1.9.0" }

  "angstrom" { >= "0.15.0" }
  "core" { >= "v0.16.0" & < "v0.18.0" }
  "decompress" { >= "1.4.1" }
  "eio_main" { = "0.11.variants" }

  "alcotest" { with-test }
  "yojson" { with-test }
  "ppx_deriving_yojson" { >= "3.5.2" & with-test }
  # "ocamlformat" { = "0.25.1" } # Development
  # "ocaml-lsp-server" # Development
]
build: ["dune" "build" "-p" name "-j" jobs]
