opam-version: "2.0"
maintainer: "Asemio"
authors: [
  "Simon Grondin"
]
synopsis: "Streaming ZIP XML XLSX parser"
description: """
SZXX is a streaming, non-seeking and efficient XLSX parser built from ground up for low memory usage.
SZXX is able to output XLSX rows while a file is being read from the file descriptor without buffering any part of the file.
It can also stream data out of ZIP files and XML files without buffering.
"""
license: "MIT"
tags: ["Stream" "ZIP" "XML" "XLSX"]
homepage: "https://github.com/asemio/SZXX"
dev-repo: "git://github.com/asemio/SZXX"
doc: "https://github.com/asemio/SZXX"
bug-reports: "https://github.com/asemio/SZXX/issues"
depends: [
  "ocaml" { >= "4.10.0" }
  "dune" { >= "1.9.0" }

  "angstrom" { >= "0.15.0" }
  "core" { >= "v0.15.0" & < "v0.17.0" }
  "decompress" { >= "1.4.1" }
  "lwt" { >= "5.3.0" }

  "alcotest-lwt" { with-test }
  "angstrom-lwt-unix" { >= "0.15.0" & with-test }
  "yojson" { with-test }
  "ppx_deriving_yojson" { >= "3.5.2" & with-test }
  # "ocamlformat" { = "0.25.1" } # Development
  # "ocaml-lsp-server" # Development
]
build: ["dune" "build" "-p" name "-j" jobs]
