(library
  (name SZXX)
  (public_name SZXX)
  (inline_tests) ; TODO
  (libraries
    SZXX.dispatcher
    core
    angstrom
    angstrom-eio
    checkseum.ocaml
    decompress.de
    eio_main
  )
  (preprocess (pps
    ppx_jane ; TODO
    ppx_sexp_conv
  ))
)

(env
  (dev
    (flags (:standard -warn-error -A)))
)
